Working on agent login.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Travel Experts</string>
+    <string name="app_name"></string>
     <string name="agent_title">Agents</string>
     <string name="customer_title">Customers</string>
 
