Tuesday update problems commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="Phone">Not a recognized phone format(eg. 111-222-3333)</string>
     <string name="Email">Not a valid e-mail (eg. jon123@travel.ca)</string>
     <string name="Postal">Not a valid Postal Code (eg. A2B 3C4)</string>
+    <string name="Fax">Not a recognized fax format(eg. 111-222-3333)</string>
+    <string name="Url">Not a supported URL format</string>
 
 
 </resources>
